--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   #teste de atualização
@@ -37,6 +35,9 @@ dependencies:
   image_picker: ^0.6.7+22
   image_cropper: ^1.4.0
   data_connection_checker: ^0.3.4
+  dio: ^3.0.10
+  shared_preferences: ^0.5.12+4
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
