--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,14 @@ dependencies:
   shared_preferences: ^0.5.12+4
   path: ^1.8.0
   diacritic: ^0.1.3
+  cached_network_image: ^2.4.1
+  carousel_pro: ^1.0.0
+  url_launcher: ^5.7.10
+  geolocator:
+  toggle_switch:
+  readmore:bruno.
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
